# docs_getter

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  service.py
docs/: _mirror-manifest.json
docs/docs/api/reference/authentication/: index.md
docs/docs/api/reference/embeddings/: index.md
docs/docs/api/reference/errors-and-debugging/: index.md
docs/docs/api/reference/limits/: index.md
docs/docs/api/reference/overview/: index.md
docs/docs/api/reference/parameters/: index.md
docs/docs/api/reference/streaming/: index.md
docs/docs/app-attribution/: index.md
docs/docs/faq/: index.md
docs/docs/guides/administration/activity-export/: index.md
docs/docs/guides/administration/api-key-rotation/: index.md
docs/docs/guides/administration/crypto-api/: index.md
docs/docs/guides/administration/organization-management/: index.md
docs/docs/guides/administration/usage-accounting/: index.md
docs/docs/guides/administration/user-tracking/: index.md
docs/docs/guides/best-practices/latency-and-performance/: index.md
docs/docs/guides/best-practices/prompt-caching/: index.md
docs/docs/guides/best-practices/reasoning-tokens/: index.md
docs/docs/quickstart/: index.md
docs/docs/sdks/agent-migration/: index.md
docs/docs/sdks/agentic-usage/: index.md
docs/sdks/typescript/: index.md
skills/doc-getter-service/: SKILL.md
skills/doc-getter-service/agents/: openai.yaml
web/: .env.example  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/[...path]/: route.ts
web/public/: Ads.txt
(+390 files in other folders)
