[project]
name = "doc-getter"
version = "0.1.0"
description = "Standalone docs mirror tool and FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "fastapi>=0.115.0",
  "markdownify>=1.2.2",
  "requests>=2.33.1",
  "scrapling>=0.4.5",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
